# Code_DUMP

./: .gitattributes  .gitignore  Colortomata.py  Configuration.cs  FRAMEWORK.md  G2C.csproj  Program.cs  README.md  README_FRAMEWORK.md  SECURITY.md  TerminalUtils.cs  app.py  merge_other_repos.ps1  next.config.mjs  package-lock.json  package.json  proxy.ts  todo
ASCII Art Generator/: README.md  ascii.py
AntiVibe AI/: package.json
Arcade/: README.md
Banking website OLD/: README.md
CS A2 Cambridge Practise/: binSearch.py
Capture/: DxgiCapture.cs  GdiCapture.cs  GdiWindowCapture.cs  ScreenCaptureFactory.cs
Colortomata/: Colortomata.py  requirements.txt
Cryptoxide/: README.md
DiffEngine/: DiffEngine.cs
Flask AI Camera/: README.md  camera.py  install.py
FrameBuffer/: FrameBufferManager.cs  Pixel.cs
G2C/: .gitignore  CONTRIBUTING.md  Configuration.cs  G2C.csproj  LICENSE  README.md
Gacha Example/: README.md
Gacha_Example/: README.md  package-lock.json  package.json
IGCSE Grade Equivelancy Calculator/: README.md  index.html  script.js  styles.css
InputBridge/: InputBridge.cs
LLM Class/: README.md
LPC/: main.py  spc_settings.json
Locked Website Template/: lockdown.html
Math Flag/: CREDITS.md  README.md
Math to Graph/: CREDITS.md  README.md
NetMon/: README.md
Projects/LPC/: README.md  pyproject.toml  spc_settings.json
Projects/LPC/spc/: __init__.py  biomes.py  device.py  game.py  mind.py  save.py  settings.py  types.py  world.py
Projects/LPC/tests/: test_divine.py  test_emotions.py  test_probe.py  test_save.py  test_world.py
(+607 files in other folders)
